Fixed drop down on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -594,11 +594,11 @@ button.list-group-item:focus {
 	margin:0;
 }
 
-.pb-content { 
+.pb-content p { 
 	
 	font-family: 'Doris', sans-serif;
 	color: #000000;
-	font-size: 16px;
+	font-size: 20px;
 	font-weight: 100;
 }
 
@@ -617,7 +617,7 @@ button.list-group-item:focus {
 	
 	font-family: 'Roboto', sans-serif;
 	color: #000000;
-	font-size: 26px;
+	font-size: 29px;
 	font-weight: 400;
 }
 
@@ -627,6 +627,11 @@ button.list-group-item:focus {
 	color: #EA9622;
 	font-size: 24px;
 	font-weight: 300;
+}
+
+.pb-content ul, ol, li { 
+	font-family: 'Doris', sans-serif;
+	font-size: 18px;
 }
 
 .pb-img {
